<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include layout="@layout/loading"/>

    <EditText
        android:id="@+id/etSummoner"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        tools:listitem="@layout/champion_list_item"
        android:autofillHints="@string/app_name" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"/>

    <TextView
        android:id="@+id/txt_profileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="profileIconId: "/>
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="name: "/>

    <TextView
        android:id="@+id/txt_summonerLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="summonerLevel: "/>
    <TextView
        android:id="@+id/txt_accountId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="accountId: "/>
    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="id: "/>



</LinearLayout>