<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCarlos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/champions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDaniel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="40dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDaniel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Summoners"
        app:layout_constraintTop_toBottomOf="@id/btnCarlos"
        app:layout_constraintBottom_toTopOf="@id/btnDavid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="40dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDavid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Items"
        app:layout_constraintTop_toBottomOf="@id/btnDaniel"
        app:layout_constraintBottom_toTopOf="@id/btnJorge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="40dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnJorge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Matches"
        app:layout_constraintTop_toBottomOf="@id/btnDavid"
        app:layout_constraintBottom_toTopOf="@id/btnMary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="40dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Spells"
        app:layout_constraintTop_toBottomOf="@id/btnJorge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>